--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
-<html>
-    <head>
-        <title>avesia - A hackable video editor.</title>
-        <link rel="stylesheet" href="/style.css" />
-    </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-                <a href="#">
-                    <img src="/assets/avesia.svg" class="logo_img" />
-                </a>
-            </div>
-            <div class="menu">
-                <a class="menu_item" href="#download">Download</a>
-                <a class="menu_item" href="#why">Community</a>
-                <a class="menu_item" href="https://github.com/avesia/editor/blob/main/README.md">Documentation</a>
-            </div>
-        </header>
-        <main class="main">
-            <div class="heroview">
-                <div class="hero_content">
-                    <h1 class="hero_head">A video editor<br/>for people who wanna <span class="color">surprise</span><br />someone with your <span class="color">ideas</span>.</h1>
-                    <div class="hero_links">
-                        <a class="hero_button" href="#download">Try now</a>
-                        <a class="hero_button filled" href="#download">Why avesia?</a>
-                    </div>
-                </div>
-            </div> 
-        </main>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>avesia - hackable graphics engine</title>
+</head>
+<body>
+    <h1>avesia</h1>
+    <h2>Quick Links</h2>
+    <ul>
+        <li><a href="#download">Download latest version</a></li>
+        <li><a href="#guides">avesia Guides</a></li>
+        <li><a href="#examples">Example projects</a></li>
+    </ul>
+</body>
 </html>
